{
    "name": "Controls",
    "maps": [
        {
            "name": "Keyboard",
            "id": "e6f8ef97-24f2-4aa2-a8b1-40a2923e4daf",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "48a73a28-ca13-4f4b-8fd9-e643c9c6caf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCW",
                    "type": "Button",
                    "id": "3db7e72f-7840-44dc-8eb6-b2422406ecaf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCCW",
                    "type": "Button",
                    "id": "3cd68d49-e5c5-4683-8493-a51320d89922",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b15cf9f0-8339-4a99-8624-9f5cc00836b7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32b8ed8d-5100-491c-b2c9-4556afa895d5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b431cca1-8ef6-4545-ba8f-86037e405b58",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCCW",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "f1828586-28fe-4d32-96e3-9387d087bfa1",
            "actions": [
                {
                    "name": "Fire1",
                    "type": "Button",
                    "id": "263dae66-78a0-41d8-9cbe-ee28677864dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire2",
                    "type": "Button",
                    "id": "cadf2854-6daf-46ab-860e-2dc5105b14dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b738b522-5d26-4dc5-880d-57c6c0f1f063",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67e88c6e-4a9c-497f-b0f2-4acecc565af9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}